# table-sqlite

./: .gitignore  Makefile.am  README.md  configure.ac  shell.nix  table-sqlite.5  table_sqlite.c
